--- a/app/src/main/res/layout/tool_bar_admin.xml
+++ b/app/src/main/res/layout/tool_bar_admin.xml
@@ -5,6 +5,7 @@
     android:id="@+id/toolBar_admin"
     style="@style/Widget.MaterialComponents.Toolbar.Primary"
     app:menu="@menu/tool_bar_menu_admin"
-    android:layout_height="?attr/actionBarSize">
+    android:layout_height="?attr/actionBarSize"
+    app:navigationIcon="@drawable/ic_baseline_arrow_back_24">
 
 </com.google.android.material.appbar.MaterialToolbar>
