--- a/app/src/main/res/menu/recycler_view_item_menu.xml
+++ b/app/src/main/res/menu/recycler_view_item_menu.xml
@@ -2,5 +2,5 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     >
     <item android:id="@+id/option_edit"
-        android:title="Edit" />
+        android:title="Details" />
 </menu>
