--- a/app/src/main/res/layout/available_destination_list_viewholder.xml
+++ b/app/src/main/res/layout/available_destination_list_viewholder.xml
@@ -1,19 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp">
 
     <RelativeLayout
-        android:id="@+id/relative_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
 
 
         <TextView
-            android:id="@+id/available_list_name_element"
+            android:id="@+id/available_list_destination_element"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
@@ -42,8 +40,8 @@
             android:layout_marginRight="21dp"
             android:background="?android:attr/listDivider" />
 
-        <CheckBox
-            android:id="@+id/select_user_checkbox"
+        <RadioGroup
+            android:id="@+id/select_destination_radiogroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
@@ -51,7 +49,16 @@
             android:layout_alignParentRight="true"
             android:layout_marginTop="17dp"
             android:layout_marginEnd="25dp"
-            android:layout_marginRight="25dp" />
+            android:layout_marginRight="25dp">
+
+            <RadioButton
+                android:id="@+id/select_destination_radiobutton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
+
+
+        </RadioGroup>
 
 
     </RelativeLayout>
