Final Commit before Merge

--- a/app/src/main/res/layout/available_destination_list_viewholder.xml
+++ b/app/src/main/res/layout/available_destination_list_viewholder.xml
@@ -6,7 +6,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         >
 
 
@@ -40,25 +40,16 @@
             android:layout_marginRight="21dp"
             android:background="?android:attr/listDivider" />
 
-        <RadioGroup
-            android:id="@+id/select_destination_radiogroup"
+        <ImageView
+            android:id="@+id/selected_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="17dp"
-            android:layout_marginEnd="25dp"
-            android:layout_marginRight="25dp">
-
-            <RadioButton
-                android:id="@+id/select_destination_radiobutton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                />
-
-
-        </RadioGroup>
+            android:layout_marginTop="31dp"
+            android:layout_marginEnd="54dp"
+            android:background="@drawable/ic_radio_button_checked_24px"
+            android:visibility="invisible" />
 
 
     </RelativeLayout>
