Working code before the null user_list_available_bug_fix

--- a/app/src/main/res/layout/acitvity_select_user_for_session.xml
+++ b/app/src/main/res/layout/acitvity_select_user_for_session.xml
@@ -23,6 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_anchorGravity="center"
+        app:menu="@menu/select_user_for_session_toolbar_menu"
         app:navigationIcon="@drawable/ic_baseline_close_24" />
 
     </com.google.android.material.appbar.AppBarLayout>
