Updated before Map Feature merge.
Feature added in current commit:
Single cycle created for a single plant-operator.
Populated UserFragment with users in current cycle.
Cycle destroy dialog added to delete all the users in cycle.
Validation added for not allowing duplicate user name in a single cycle.

--- a/app/src/main/res/layout/available_destination_list_viewholder.xml
+++ b/app/src/main/res/layout/available_destination_list_viewholder.xml
@@ -26,6 +26,8 @@
             android:textSize="18sp"
             android:textStyle="normal" />
 
+
+
         <View
             android:id="@+id/divider"
             android:layout_width="350dp"
@@ -38,7 +40,10 @@
             android:layout_marginTop="86dp"
             android:layout_marginEnd="21dp"
             android:layout_marginRight="21dp"
-            android:background="?android:attr/listDivider" />
+            android:background="?android:attr/listDivider"
+            android:visibility="invisible"/>
+
+
 
         <ImageView
             android:id="@+id/selected_icon"
