--- a/app/src/main/res/layout/available_user_list_viewholder.xml
+++ b/app/src/main/res/layout/available_user_list_viewholder.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp">
 
     <RelativeLayout
-        android:id="@+id/relative_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         >
 
 
@@ -40,22 +38,24 @@
             android:layout_marginTop="86dp"
             android:layout_marginEnd="21dp"
             android:layout_marginRight="21dp"
-            android:background="?android:attr/listDivider" />
+            android:background="?android:attr/listDivider"
+            android:visibility="invisible"/>
 
         <CheckBox
             android:id="@+id/select_user_checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="37dp"
+            android:layout_height="34dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="17dp"
-            android:layout_marginEnd="25dp"
-            android:layout_marginRight="25dp" />
+            android:layout_marginTop="25dp"
+            android:layout_marginEnd="40dp"
+             />
 
 
     </RelativeLayout>
 
 
 </com.google.android.material.card.MaterialCardView>
+
+
 
