--- a/app/src/main/res/layout/session_user_list_viewholder.xml
+++ b/app/src/main/res/layout/session_user_list_viewholder.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="10dp"
-    >
+    android:layout_marginTop="10dp">
 
     <RelativeLayout
         android:id="@+id/relative_layout"
@@ -15,10 +12,9 @@
 
 
         <TextView
-            android:id="@+id/list_name_element"
+            android:id="@+id/session_list_name_element"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="ABCDEF"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
@@ -26,15 +22,15 @@
             android:layout_marginLeft="26dp"
             android:layout_marginTop="9dp"
             android:padding="10dp"
+            android:text="ABCDEF"
             android:textColor="@android:color/black"
             android:textSize="18sp"
             android:textStyle="normal" />
 
         <TextView
-            android:id="@+id/list_phone_no_element"
+            android:id="@+id/session_list_destination_element"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="abcdef"
             android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
@@ -42,12 +38,13 @@
             android:layout_marginLeft="34dp"
             android:layout_marginTop="39dp"
             android:padding="10dp"
+            android:text="abcdef"
             android:textColor="@android:color/darker_gray"
             android:textSize="14sp" />
 
 
         <View
-            android:id="@+id/divider"
+            android:id="@+id/dividers"
             android:layout_width="350dp"
             android:layout_height="2dp"
             android:layout_alignParentStart="true"
@@ -60,21 +57,5 @@
             android:layout_marginRight="21dp"
             android:background="?android:attr/listDivider" />
 
-        <ImageButton
-            android:id="@+id/recycler_view_menu"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="32dp"
-            android:layout_marginEnd="34dp"
-            android:layout_marginRight="34dp"
-            android:background="@drawable/ic_more_vert_24px" />
-
-
     </RelativeLayout>
-
-
 </com.google.android.material.card.MaterialCardView>
-
