--- a/app/src/main/res/menu/tool_bar_menu.xml
+++ b/app/src/main/res/menu/tool_bar_menu.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
-        android:id="@+id/favorite"
-        android:icon="@drawable/ic_sharp_search_24"
-        app:showAsAction="ifRoom"
-        android:title= "Search" />
 
     <item
-        android:id="@+id/item_about"
+        android:id="@+id/admin_page_option"
         android:title="Manage Users"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/delete_cycle"
+        android:title="Delete cycle"/>
 </menu>
