working version-1.0 Features: -Map added -Displaying the inCycle truck operators on the map. -Delete cycle option added
Enhancements:
-Realtime adding of the new truck operators to the map
-Realtime position change of the truck operators on the map
-Displaying the truck operators only after receiving the initial coordinate value.

--- a/app/src/main/res/layout/fragment_sender.xml
+++ b/app/src/main/res/layout/fragment_sender.xml
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="3"
             android:padding="24dp"
-            android:text="Users List"
+            android:text="Truck Operators"
             android:textColor="@android:color/white" />
 
         <ImageView
