--- a/app/src/main/res/layout/fragment_sender.xml
+++ b/app/src/main/res/layout/fragment_sender.xml
@@ -34,8 +34,9 @@
             android:layout_gravity="center"
             android:layout_weight="1"
             app:srcCompat="@mipmap/baseline_expand_less_white_18dp" />
+
     </LinearLayout>
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="64dp"
