--- a/app/src/main/res/layout/session_user_list_viewholder.xml
+++ b/app/src/main/res/layout/session_user_list_viewholder.xml
@@ -5,7 +5,7 @@
     android:layout_marginTop="10dp">
 
     <RelativeLayout
-        android:id="@+id/relative_layout"
+        android:id="@+id/user_list_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
@@ -16,10 +16,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_marginStart="26dp"
-            android:layout_marginLeft="26dp"
             android:layout_marginTop="9dp"
             android:padding="10dp"
             android:text="ABCDEF"
@@ -32,10 +30,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_marginStart="34dp"
-            android:layout_marginLeft="34dp"
             android:layout_marginTop="39dp"
             android:padding="10dp"
             android:text="abcdef"
@@ -48,13 +44,10 @@
             android:layout_width="350dp"
             android:layout_height="2dp"
             android:layout_alignParentStart="true"
-            android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_marginStart="32dp"
-            android:layout_marginLeft="32dp"
             android:layout_marginTop="86dp"
             android:layout_marginEnd="21dp"
-            android:layout_marginRight="21dp"
             android:background="?android:attr/listDivider" />
 
     </RelativeLayout>
