--- a/app/src/main/res/menu/tool_bar_menu.xml
+++ b/app/src/main/res/menu/tool_bar_menu.xml
@@ -5,5 +5,6 @@
     <item
         android:id="@+id/admin_page_option"
         android:title="Manage Users"
-        app:showAsAction="never" />
+        android:icon="@drawable/manage_user_icon"
+        app:showAsAction="ifRoom|collapseActionView" />
 </menu>
