Feature added: - Empty Plant Drivers List is indicated by message. - Drivers cannot be added to session if there are no drivers added to plant. - Did renaming of the miscellaneous UI widgets.

--- a/app/src/main/res/layout/fragment_sender.xml
+++ b/app/src/main/res/layout/fragment_sender.xml
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="3"
             android:padding="24dp"
-            android:text="Truck Operators"
+            android:text="Drivers"
             android:textColor="@android:color/white" />
 
         <ImageView
