--- a/app/src/main/res/menu/select_user_for_session_toolbar_menu.xml
+++ b/app/src/main/res/menu/select_user_for_session_toolbar_menu.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/menu_save_icon"
-        android:icon="@drawable/ic_baseline_save_24"
-        android:title="save"
+        android:title="SAVE"
         app:showAsAction="ifRoom|collapseActionView"/>
 
 </menu>
