--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,7 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="contextual_action_bar_color">#404040</color>
+    <color name = "EmptyListHeader">#686868</color>
+    <color name = "EmptyListBd">#B1B1B1</color>
 </resources>
 
