--- a/app/src/main/res/layout/fragment_sender.xml
+++ b/app/src/main/res/layout/fragment_sender.xml
@@ -35,6 +35,14 @@
             android:layout_weight="1"
             app:srcCompat="@mipmap/baseline_expand_less_white_18dp" />
 
+        <ImageView
+            android:id="@+id/referesh_button"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:background="@drawable/ic_baseline_refresh_24" />
+
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
